# mazinger

./: .gitignore  DOCS.md  README.md  pyproject.toml  qwen3_tts_eager.yaml
docs/: README.md  cli-reference.md  configuration.md  installation.md  pipeline.md  project-structure.md  python-api.md  quick-start.md  subtitle-styling.md  voice-profiles.md
docs/notebooks/: mazinger_studio.ipynb
docs/notebooks/studio/: app.py  constants.py  helpers.py  pipeline.py  theme.py
mazinger/: __init__.py  __main__.py  assemble.py  describe.py  download.py  llm.py  paths.py  pipeline.py  profiles.py  resegment.py  review.py  srt.py  subtitle.py  thumbnails.py  transcribe.py  translate.py  tts.py  utils.py
mazinger/cli/: __init__.py  _describe.py  _download.py  _dub.py  _groups.py  _resegment.py  _speak.py  _thumbnails.py  _transcribe.py  _translate.py
mazinger_dubber/: cli.py  paths.py  pipeline.py  resegment.py  transcribe.py
tests/: test_integration.py  test_mlx.py
