[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazinger"
version = "1.9.5"
description = "End-to-end video dubbing pipeline: transcribe, translate, and voice-clone."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0",
    "openai>=1.0",
    "json-repair>=0.28",
    "Pillow>=10.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "tqdm>=4.60",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
# Fast local transcription with faster-whisper (CTranslate2)
# Compatible with ALL TTS engines (no transformers version conflicts)
# Recommended for offline/local transcription with Chatterbox TTS.
transcribe-faster = [
    "faster-whisper>=1.0",
]
# Local transcription with WhisperX (uses transformers>=4.48)
# NOT compatible with tts-chatterbox due to transformers conflict.
# For chatterbox environments, use faster-whisper or OpenAI transcription.
transcribe-whisperx = [
    "whisperx>=3.8.4",
    "pyannote.audio>=4.0",  # torchaudio 2.11+ removed AudioMetaData; pyannote 4.x is compatible
    "torch>=2.0",
    "scipy>=1.14",          # ABI-compatible with numpy 2.x (Colab Fix)
    "scikit-learn>=1.5",    # Pulled by transformers; must match scipy
]
# Cloud transcription with Deepgram Nova API
# Compatible with ALL TTS engines (no local GPU or transformers dependency).
transcribe-deepgram = [
    "deepgram-sdk>=6.0",
]
# Alias for convenience (points to faster-whisper)
transcribe = [
    "mazinger[transcribe-faster]",
]
# TTS with Qwen (compatible with transcribe-whisperx and transcribe-faster)
tts = [
    "qwen-tts",
    "torch>=2.0",
    "soundfile>=0.12",
]
# TTS with Chatterbox
# Use faster-whisper or OpenAI transcription (whisperx has conflicts).
tts-chatterbox = [
    "chatterbox-tts",
    "resemble-perth>=1.0.1",  # Explicit: avoid conflict with unrelated 'perth' package
    "torch>=2.0",
    "torchaudio>=2.0",  # Must match torch version
    "soundfile>=0.12",
    "numpy>=1.26",  # Override chatterbox-tts pinned version for Python 3.12+
    "pandas>=2.2",  # Override chatterbox-tts pinned version for Python 3.12+
    # setuptools<70 removed: pkg_resources is deprecated but still present in setuptools 70+
]
# Optional: flash-attn for faster attention (requires CUDA, complex build)
flash-attn = [
    "flash-attn>=2.0",
]
# Optional: demucs for high-quality vocal/background separation
audio-enhance = [
    "demucs>=4.0.1",
]
# Full pipeline with Qwen TTS — same as bare install (kept as alias)
all-qwen = [
    "mazinger[transcribe-faster,tts,audio-enhance]",
]
# Full pipeline with Chatterbox TTS + faster-whisper (fully compatible)
all-chatterbox = [
    "mazinger[transcribe-faster,tts-chatterbox,audio-enhance]",
]
# TTS with MLX Qwen3-TTS for Apple Silicon
tts-mlx = [
    "mlx-audio>=0.4.2",
    "mlx>=0.20",
    "soundfile>=0.12",
]
# MLX Whisper for Apple Silicon transcription
transcribe-mlx = [
    "mlx-whisper>=0.4",
]
# Full pipeline with MLX + faster-whisper fallback/support — Apple Silicon only
all-mlx = [
    "mazinger[transcribe-faster,transcribe-mlx,tts-mlx]",
]

[project.scripts]
mazinger = "mazinger.cli:main"

[tool.setuptools.packages.find]
where = ["."]

# UV-specific overrides for Python 3.12+ / Colab CUDA compatibility
# chatterbox-tts 0.1.6 hard-pins torch==2.6.0, torchaudio==2.6.0, numpy<1.26,
# gradio==5.44.1, and safetensors==0.5.3.  On Colab L4 (CUDA 12.8) these
# cause a multi-GB downgrade that breaks the environment.
# These overrides tell uv: "accept anything >= these floors" so the already-
# installed CUDA-optimised builds are reused instead of being replaced.
[tool.uv]
override-dependencies = [
    "numpy>=1.26",         # chatterbox pins numpy<1.26; conflicts with Python 3.12+
    "pandas>=2.2",         # chatterbox pins old pandas; not needed for inference
    "torch>=2.0",          # chatterbox pins torch==2.6.0; allow system CUDA build
    "torchaudio>=2.0",     # chatterbox pins torchaudio==2.6.0; allow system CUDA build
    "safetensors>=0.3",    # chatterbox pins safetensors==0.5.3; 0.7+ is backward-compat
]

# Build dependencies for packages with missing build requirements
[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
